# ALGO2TP2

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  test_travis
docs/html/: BaseDeDatos_8h_source.html  Dato_8h_source.html  Registro_8h_source.html  Restriccion_8h_source.html  Tabla_8h_source.html  annotated.html  classBaseDeDatos-members.html  classBaseDeDatos.html  classBaseDeDatos_1_1join__iterator-members.html  classBaseDeDatos_1_1join__iterator.html  classBaseDeDatos_1_1join__iterator__2-members.html  classBaseDeDatos_1_1join__iterator__2.html  classBaseDeDatos_1_1join__iterator__2__coll__graph.dot  classBaseDeDatos_1_1join__iterator__2__coll__graph.md5  classBaseDeDatos_1_1join__iterator__coll__graph.dot  classBaseDeDatos_1_1join__iterator__coll__graph.md5  classBaseDeDatos__coll__graph.dot  classBaseDeDatos__coll__graph.md5  classDato-members.html  classDato.html  classDato__coll__graph.dot  classRegistro.html  (+68 more)
src/: BaseDeDatos.cpp  BaseDeDatos.h  Database.cpp  Database.h  Database_defines.h  Database_join_iterator.cpp  Database_join_iterator.h  Datum.cpp  Datum.h  Filter.cpp  Filter.h  Record.cpp  Record.h  Registro.cpp  Registro.h  Restriccion.cpp  Restriccion.h  Tabla.cpp  Tabla.h  Table.cpp  Table.h  linear_map.h  linear_map.hpp  linear_set.h  linear_set.hpp  linear_set_iterators.h  string_map.h  string_map.hpp  utils.h
tests/: base_de_datos_test.cpp  database_test.cpp  dato_test.cpp  datum_test.cpp  linear_map_tests.cpp  linear_set_tests.cpp  record_test.cpp  registro_test.cpp  string_map_test.cpp  tabla_test.cpp  table_test.cpp
(+115 files in other folders)
